@@ -77,6 +77,7 @@ Bugs fixed
 - Bug 2439 - SixLowPan Compression kind need to be casted to int in the Print function
 - Bug 2440 - SocketIpTosTag might be added twice if a packet is sent multiple times
 - Bug 2442 - TrafficControl makes ConfigStore crash 
+- Bug 2443 - Increase applications counters to accomodate Gbps transfer rates.
 - Bug 2446 - Comma instead of pipe in Attributes
 
 Known issues
